--- a/ccminer.vcxproj
+++ b/ccminer.vcxproj
@@ -68,7 +68,7 @@
       <MaxRegCount>80</MaxRegCount>
       <PtxAsOptionV>true</PtxAsOptionV>
       <Keep>true</Keep>
-      <CodeGeneration>compute_52,sm_52</CodeGeneration>
+      <CodeGeneration>compute_61,sm_61</CodeGeneration>
       <Include>$(NVTOOLSEXT_PATH)\include;..\..\..\Common\C99</Include>
       <TargetMachinePlatform>64</TargetMachinePlatform>
     </CudaCompile>
@@ -110,7 +110,7 @@
       <MaxRegCount>80</MaxRegCount>
       <PtxAsOptionV>true</PtxAsOptionV>
       <Keep>true</Keep>
-      <CodeGeneration>compute_52,sm_52;compute_50,sm_50;compute_35,sm_35;compute_30,sm_30</CodeGeneration>
+      <CodeGeneration>compute_61,sm_61</CodeGeneration>
       <Include>$(NVTOOLSEXT_PATH)\include</Include>
       <Optimization>O3</Optimization>
       <TargetMachinePlatform>64</TargetMachinePlatform>
@@ -205,10 +205,8 @@
       <MaxRegCount>128</MaxRegCount>
     </CudaCompile>
     <CudaCompile Include="equi\cuda_equi.cu">
-      <CodeGeneration>compute_52,sm_52;compute_50,sm_50;compute_30,sm_30</CodeGeneration>
       <AdditionalOptions> -Xptxas -dlcm=ca -Xptxas -dscm=cs %(AdditionalOptions)</AdditionalOptions>
       <MaxRegCount>0</MaxRegCount>
-      <CodeGeneration Condition="'$(Configuration)|$(Platform)'=='Release|x64'">compute_61,sm_61;compute_52,sm_52;compute_50,sm_50;compute_30,sm_30</CodeGeneration>
     </CudaCompile>
     <CudaCompile Include="neoscrypt\cuda_neoscrypt.cu">
       <MaxRegCount>160</MaxRegCount>
@@ -320,27 +318,13 @@
     <CudaCompile Include="scrypt\blake.cu" />
     <CudaCompile Include="scrypt\keccak.cu" />
     <CudaCompile Include="scrypt\sha256.cu" />
-    <CudaCompile Include="scrypt\salsa_kernel.cu">
-      <CodeGeneration>compute_30,sm_30</CodeGeneration>
-    </CudaCompile>
-    <CudaCompile Include="scrypt\fermi_kernel.cu">
-      <CodeGeneration>compute_30,sm_30</CodeGeneration>
-    </CudaCompile>
-    <CudaCompile Include="scrypt\kepler_kernel.cu">
-      <CodeGeneration>compute_30,sm_30</CodeGeneration>
-    </CudaCompile>
-    <CudaCompile Include="scrypt\nv_kernel.cu">
-      <CodeGeneration>compute_30,sm_30</CodeGeneration>
-    </CudaCompile>
-    <CudaCompile Include="scrypt\nv_kernel2.cu">
-      <CodeGeneration>compute_35,sm_35;compute_50,sm_50;compute_52,sm_52</CodeGeneration>
-    </CudaCompile>
-    <CudaCompile Include="scrypt\test_kernel.cu">
-      <CodeGeneration>compute_30,sm_30</CodeGeneration>
-    </CudaCompile>
-    <CudaCompile Include="scrypt\titan_kernel.cu">
-      <CodeGeneration>compute_35,sm_35;compute_50,sm_50</CodeGeneration>
-    </CudaCompile>
+    <CudaCompile Include="scrypt\salsa_kernel.cu" />
+    <CudaCompile Include="scrypt\fermi_kernel.cu" />
+    <CudaCompile Include="scrypt\kepler_kernel.cu" />
+    <CudaCompile Include="scrypt\nv_kernel.cu" />
+    <CudaCompile Include="scrypt\nv_kernel2.cu" />
+    <CudaCompile Include="scrypt\test_kernel.cu" />
+    <CudaCompile Include="scrypt\titan_kernel.cu" />
     <CudaCompile Include="sha256\cuda_sha256d.cu" />
     <CudaCompile Include="sha256\sha256d.cu" />
     <CudaCompile Include="sha256\cuda_sha256t.cu" />
@@ -460,14 +444,11 @@
     <CudaCompile Include="phi\cuda_phi2_cubehash512.cu" />
     <CudaCompile Include="skunk\skunk.cu" />
     <CudaCompile Include="skunk\cuda_skunk.cu">
-      <CodeGeneration>compute_50,sm_50;compute_52,sm_52</CodeGeneration>
       <MaxRegCount>64</MaxRegCount>
     </CudaCompile>
     <CudaCompile Include="skunk\cuda_skunk_streebog.cu" />
     <ClInclude Include="tribus\cuda_echo512_aes.cuh" />
-    <CudaCompile Include="tribus\cuda_echo512_final.cu">
-      <CodeGeneration>compute_50,sm_50;compute_52,sm_52</CodeGeneration>
-    </CudaCompile>
+    <CudaCompile Include="tribus\cuda_echo512_final.cu" />
     <CudaCompile Include="tribus\tribus.cu" />
     <ClInclude Include="x11\cuda_x11_aes.cuh" />
     <CudaCompile Include="x11\cuda_x11_cubehash512.cu" />
@@ -517,9 +498,7 @@
     <CudaCompile Include="x16\cuda_x16_fugue512.cu" />
     <CudaCompile Include="x16\cuda_x16_shabal512.cu" />
     <CudaCompile Include="x16\cuda_x16_simd512_80.cu" />
-    <CudaCompile Include="x16\cuda_x16_echo512_64.cu">
-      <CodeGeneration>compute_50,sm_50;compute_52,sm_52</CodeGeneration>
-    </CudaCompile>
+    <CudaCompile Include="x16\cuda_x16_echo512_64.cu" />
     <CudaCompile Include="x17\hmq17.cu" />
     <CudaCompile Include="x17\sonoa.cu" />
     <CudaCompile Include="x17\x17.cu" />
